<?xml version="1.0" encoding="utf-8"?>
<android.support.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".add_task_screen.AddTaskActivity"
    tools:deviceIds="wear">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:boxedEdges="all">

        <TextView
            android:id="@+id/edit_task_label"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/add_task"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            app:layout_constraintStart_toEndOf="@+id/home_image_button"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/task_edit_text"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/text_color"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textColor="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_task_label" />

        <Button
            android:id="@+id/add_task_button"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/background_color"
            android:text="@string/save_task"
            android:textAllCaps="true"
            android:textColor="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/task_edit_text" />

        <ImageButton
            android:id="@+id/home_image_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/background_color"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_chevron_left_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.wear.widget.BoxInsetLayout>